kubernetes/lab/09-networking/07-np-egress-ip-ns-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-paymentgw
spec:
  podSelector:
    matchLabels:
      app: paymentgw
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 100.20.4.0/24  # Third party gateway network 
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: account
    - podSelector:
        matchLabels:
          app: payment
    ports:
    - protocol: TCP
      port: 443
