kubernetes/lab/09-networking/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-front-layer
spec:
  podSelector:
    matchLabels:
      app: weather-db
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    - namespaceSelector:
        matchLabels:
          app: rajesh
    - podSelector:
        matchLabels:
          app: weather-services
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-service-layer
spec:
  podSelector:
    matchLabels:
      app: weather-services
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: weather-front
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-db-layer
spec:
  podSelector:
    matchLabels:
      app: weather-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          # kubernetes.io/metadata.name: klaas2112u1
          department: payment
      # podSelector:
      #   matchLabels:
      #     app: weather-service    
    - podSelector:
        matchLabels:
          app: weather-service
    ports:
    - protocol: TCP
      port: 3306
